[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "xmlcli-mod"
version = "0.1.0"
description = "XmlCli Module (based on UFFAF)"
authors = ["hkxs <lalvarezf25@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hkxs/xml-cli-module"
include = ["CONTRIBUTORS.txt", "NOTICE", "LICENSE"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
defusedxml = "0.7.1"

[tool.poetry.group.dev.dependencies]
bandit = "*"
black = "*"
flake8-pyproject = "*"
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"
sphinx = "*"
sphinx-rtd-theme = "*"

[tool.black]
max-line-length = 120
exclude = [
    "__pycache__",
    "*pyc",
    "docs",
]
format = "pylint"
count = true
statistics = true
tee = true
ignore = [
    "E203",
    "E501",
    "E722",
    "W503"
]
