[project]
name = "xmlcli"
version = "2.0.6"
description = "UFFAF - UEFI Firmware Foundational Automation Framework (formerly Xml-Cli)"
authors = [{name = "Gahan Saraya", email = "gahan.saraiya@intel.com"}]
maintainers = [{name = "Intel", email = "xmlcli@intel.com"}]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["uffaf", "xmlcli", "xml-cli", "framework", "automation", "validation", "bios", "xml"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "defusedxml>=0.6.0"
]

[project.urls]
Homepage = "https://github.com/intel/xml-cli"
Repository = "https://github.com/intel/xml-cli"

[project.scripts]
xmlcli = "xmlcli.start_xmlcli:cli"
uefi-analyze = "xmlcli.modules.uefi_analyzer.cli:main"

[tool.poetry]
packages = [{include = "xmlcli", from = "src"}]

[tool.poetry.group.dev.dependencies]
tox = ">=3.23.0"
pygments = ">=2.20.0"
requests = ">=2.33.0"
filelock = ">=3.20.1"
jinja2 = "^3.1.6"
babel = ">=2.9.1"
sphinx = ">=4.0.2"
pytest = ">=9.0.3"
pytest-html = ">=4.1.0"
flake8 = ">=6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    "out"
]
ignore = "E501"
indent-size = 2

